--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+
+:root {
+  --textColor: #212121;
+  --primaryWhiteColor: #ffffff;
+  --bgColor: #d8bfd8;
+  --darkVioletColor: #391d35;
+  --violetColor: #613d5c;
+  --shadow-dark: gray 1px 1px 10px, gray -1px -1px 10px, gray -1px 1px 10px,
+    gray 1px -1px 10px;
+  --transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  background-image: url('./img/seruzor68.jpg');
+  font-family: 'Comfortaa', cursive;
+
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+}
+
+a {
+  text-decoration: none;
+  outline: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+button {
+  user-select: none;
+}
+
+li {
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+h1 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 25px;
+  color: var(--violetColor);
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--violetColor);
 }
