--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -14,6 +14,7 @@
 
 .data {
   display: flex;
+  color: var(--darkVioletColor);
   justify-content: space-evenly;
   text-align: left;
   width: 100%;
